# h5fortran-fetchcontent

./: CMakeLists.txt  README.md
app/: main.f90
